[package]
name = "ore_monitor"
version = "0.1.0"
edition = "2021"

[lib]
name = "common"
path = "src/libs/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive","string"] }
reqwest = "0.11"
tokio = { version = "1" ,features = ["macros","rt-multi-thread"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
anyhow = "1.0"
human_bytes="0.4"
async-trait = "0.1.77"