[workspace]
resolver = "1"
members = [
    "crates/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Zodd"]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1.77"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive","string"] }
human_bytes="0.4"
ore_monitor_common = { path = "crates/ore_monitor_common" }
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1" ,features = ["macros","rt-multi-thread"]}
tokio-stream = "0.1"
versions = "6.1.0"
zip = "0.6.6"